--- a/src/app/menupage/menupage.component.scss
+++ b/src/app/menupage/menupage.component.scss
@@ -24,7 +24,7 @@
 
 .menu-card-header {
   color: rgb(15, 139, 255);
-  font: 3.5em "Dungeon", strong sans-serif;
+  font: 3.5em 'Dungeon', strong sans-serif;
   text-shadow: 4px 4px #4e0a0a;
 }
 
